@@ -7,6 +7,46 @@
 	  <setting id="gay" type="bool" label="2058" default="false"/>
 	  <setting id="order" type="text" label="Order" default="rating" visible="False"/>
    </category>
+   <category label="2000">
+		<setting id="brazzerstv" type="bool" label="Brazzers TV" default="true" visible="true"/>
+		<setting id="brasileirinhas" type="bool" label="Brasileirinhas" default="true" visible="true"/>
+		<setting id="sexyhot" type="bool" label="SexyHot" default="true" visible="true"/>
+		<setting id="pboytv" type="bool" label="Playboy TV" default="true" visible="true"/>
+		<setting id="pboytvchat" type="bool" label="Playboy TV Chat" default="true" visible="true"/>
+		<setting id="penthousehd" type="bool" label="Penthouse HD" default="true" visible="true"/>
+		<setting id="hot" type="bool" label="Hot" default="true" visible="false"/>
+		<setting id="hustlerhd" type="bool" label="Hustler HD" default="true" visible="true"/>
+		<setting id="viki" type="bool" label="Viki Enjoy Premium" default="true" visible="true"/>
+		<setting id="vietsex" type="bool" label="Viet Sex TV" default="true" visible="true"/>
+		<setting id="bella" type="bool" label="Bella Club" default="true" visible="true"/>
+		<setting id="bella2" type="bool" label="Bella Club 2" default="true" visible="true"/>
+		<setting id="butgo" type="bool" label="ButGO" default="true" visible="true"/>
+		<setting id="filthon-adult" type="bool" label="Filthon Adult" default="true" visible="true"/>
+		<setting id="filthon-adult-fetish" type="bool" label="Filthon Adult Fetish" default="true" visible="true"/>
+		<setting id="xxl" type="bool" label="XXL" default="true" visible="true"/>
+		<setting id="frenchlover" type="bool" label="Frenchlover" default="true" visible="true"/>
+		<setting id="dorceltv" type="bool" label="Dorcel TV" default="true" visible="true"/>
+		<setting id="ipure" type="bool" label="iPure TV" default="true" visible="true"/>
+		<setting id="private" type="bool" label="Private" default="true" visible="true"/>
+		<setting id="privategold" type="bool" label="Private Gold" default="true" visible="true"/>
+		<setting id="venus" type="bool" label="Venus" default="true" visible="true"/>
+		<setting id="xdesire" type="bool" label="xDesire" default="true" visible="false"/>
+		<setting id="blue-hustler" type="bool" label="Blue Hustler" default="true" visible="false"/>
+		<setting id="olala" type="bool" label="O-la-la" default="true" visible="true"/>
+		<setting id="eroxxx" type="bool" label="Ero XXX" default="true" visible="false"/>
+		<setting id="amateritv" type="bool" label="Amateri TV" default="true" visible="true"/>
+		<setting id="russian-nights" type="bool" label="Russian Nights" default="true" visible="true"/>
+		<setting id="hustlertv" type="bool" label="Hustler TV" default="true" visible="true"/>
+		<setting id="sexzonehd" type="bool" label="Sexzone HD" default="true" visible="true"/>
+		<setting id="redlighthd" type="bool" label="Redlight HD" default="true" visible="true"/>
+		<setting id="hallotv" type="bool" label="Hallo TV" default="true" visible="true"/>
+		<setting id="platinumtv" type="bool" label="Platinum TV" default="true" visible="true"/>
+		<setting id="sexprive" type="bool" label="Sexprive Brasileirinhas" default="true" visible="true"/>
+		<setting id="nightclub" type="bool" label="Nightclub TV" default="true" visible="true"/>
+		<setting id="temptation" type="bool" label="Temptation TV" default="true" visible="true"/>
+		<setting type="sep"/>
+		<setting id="filthon-gay" type="bool" label="Filthon Gay" default="true" visible="true"/>
+   </category>
    <category label="Download">
 		<setting id="download-folder" type="folder" label="2044" default=""/>
    </category>
